--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Mi proyecto del curso esencial de HTML y CSS" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://alfonsovillanueva.github.io/curso-esencial-html-css/" />
+    <meta property="og:image" content="https://alfonsovillanueva.github.io/curso-esencial-html-css/images/dom.png" />
+    <meta property="og:description" 
+    content="Todo lo que necesitas saber en tu dia a día como FrontEnd." />
     <link rel="stylesheet" href="./css/alfgowlogical.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
