--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <p>
                         Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de desarrollo avanzadas y de amigable uso.
                     </p>
-                    <img src="./images/code-white.png" alt="Logo de Visual Studio Code" title="Logo de Visual Studio Code" id="vscode">
+                    <img src="./images/code-white.png" alt="Logo de Visual Studio Code" title="Logo de Visual Studio Code" id="vsc">
                     <h3>Visual Studio Code</h3>
                     <p>Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la capacidad de extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en el que se desemvuelva.</p>
                     <img src="./images/figma-white.png" alt="Logo de Figma" title="Logo de Figma" id="figma">
