--- a/nemiuma.html
+++ b/nemiuma.html
@@ -58,7 +58,7 @@
                     <a href="index.html">Nemium B</a>
                   </li>
                   <li>
-                    <a href="">Nemium C</a>
+                    <a href="nemiumc.html">Nemium C</a>
                   </li>
                   <li>
                     <a href="">Nemium D</a>
