--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                     <a href="nemiumc.html">Nemium C</a>
                   </li>
                   <li>
-                    <a href="">Nemium D</a>
+                    <a href=nemiumd.html">Nemium D</a>
                   </li>
                   <li>
-                    <a href="">Nemium E</a>
+                    <a href="nemiume.html">Nemium E</a>
                   </li>
                 </ul>
                 </details>
