--- a/index.html
+++ b/index.html
@@ -281,6 +281,12 @@
         
         
     </main>
+ 
 </body>
+<footer>
+  <p>
+    &copy; Alfgow 2021
+  </p>
+</footer>
 <!-- <script src="js/alfgow.js"></script> -->
 </html>
