--- a/nemiumc.html
+++ b/nemiumc.html
@@ -65,13 +65,13 @@
                     <a href="index.html">Nemium B</a>
                   </li>
                   <li>
-                    <a href="">Nemium C</a>
+                    <a href="nemiumc.html">Nemium C</a>
                   </li>
                   <li>
-                    <a href="">Nemium D</a>
+                    <a href="nemiumd.html">Nemium D</a>
                   </li>
                   <li>
-                    <a href="">Nemium E</a>
+                    <a href="nemiume.html">Nemium E</a>
                   </li>
                 </ul>
                 </details>
@@ -282,5 +282,10 @@
         
     </main>
 </body>
+<footer>
+  <p>
+    &copy; Alfgow 2021
+  </p>
+</footer>
 <!-- <script src="js/alfgow.js"></script> -->
 </html>
