--- a/nemiumd.html
+++ b/nemiumd.html
@@ -27,10 +27,9 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="./css/alfgowa.css">
+    <link rel="stylesheet" href="./css/alfgowd.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>AlfGoW</title>
 </head>
 <!-- ALT + flecha mueven el párrafo -->
@@ -149,20 +148,21 @@
                     <h2>
                         Setup
                     </h2>
-                    <img src="./images/chrome-white.png" alt="Logo de Google Chrome" title="Logo de Google Chrome" id="google-chrome">
+                    <img src="./images/google-chrome.png" alt="Logo de Google Chrome" title="Logo de Google Chrome" id="google-chrome">
                     <h3>Google Chrome</h3>
                     <p>
                         Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de desarrollo avanzadas y de amigable uso.
                     </p>
-                    <img src="./images/code-white.png" alt="Logo de Visual Studio Code" title="Logo de Visual Studio Code" id="vsc">
+                    <img src="./images/visual-studio-code.png" alt="Logo de Visual Studio Code" title="Logo de Visual Studio Code" id="vsc">
                     <h3>Visual Studio Code</h3>
                     <p>Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la capacidad de extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en el que se desemvuelva.</p>
-                    <img src="./images/figma-white.png" alt="Logo de Figma" title="Logo de Figma" id="figma">
+                    <img src="./images/figma.png" alt="Logo de Figma" title="Logo de Figma" id="figma">
                     <h3>Figma</h3>
                     <p>Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su implementación por su fácil uso porque puede ser usado directamente desde el navegador.</p>
-                    <img src="./images/github-white.png" alt="Logo de Github" title="Logo de Github" id="github">
+                    <img src="./images/github.png" alt="Logo de Github" title="Logo de Github" id="github">
                     <h3>Github</h3>
                     <p>Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores de todo el mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o guardarlo de manera privada, Github será esencial para almacenar tu futuro portafolio.</p>
+                    
                     <blockquote>
                         <p>
                             “Este es el inicio de tu carrera como Desarrollador Web”
@@ -282,5 +282,10 @@
         
     </main>
 </body>
+<footer>
+  <p>
+    &copy; Alfgow 2021
+  </p>
+</footer>
 <!-- <script src="js/alfgow.js"></script> -->
 </html>
