--- a/nemiume.html
+++ b/nemiume.html
@@ -27,7 +27,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="./css/alfgowa.css">
+    <link rel="stylesheet" href="./css/alfogwe.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -61,7 +61,7 @@
                     <a href="nemiumc.html">Nemium C</a>
                   </li>
                   <li>
-                    <a href="nemiumd.html">Nemium D</a>
+                    <a href=nemiumd.html">Nemium D</a>
                   </li>
                   <li>
                     <a href="nemiume.html">Nemium E</a>
@@ -281,6 +281,12 @@
         
         
     </main>
+ 
 </body>
+<footer>
+  <p>
+    &copy; Alfgow 2021
+  </p>
+</footer>
 <!-- <script src="js/alfgow.js"></script> -->
 </html>
